[project]
name = "lang-graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Yash Chavan",email = "yashchavan1484@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-xai (>=1.2.2,<2.0.0)",
    "langchain-tavily (>=0.2.18,<0.3.0)",
    "langgraph (>=1.2.6,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "langchain-groq (>=1.1.3,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"